# base-app

./: .commitlinrc.json  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  docker-compose.yml  hello.go  hello_test.go  package.json  sample_invelid.sql
.github/workflows/: cypress.yml  release.yml  workflow.yml  zetasql-formatter.yml  zetasql-formatter.yml 
.husky/: commit-msg
bff/: go.mod  repositories.bzl
bff/cmd/hello/: BUILD.bazel  main.go  main_test.go
frontend/: .gitignore  cypress.json  firebase.json  i18n.ts  next.config.js  package.json
frontend/.storybook/: i18n.js  main.js  preview.js
frontend/atoms/: GoogleSignIn.stories.tsx
frontend/components/atoms/: GoogleSignIn.stories.tsx  GoogleSignIn.tsx  GoogleSignInButton.stories.tsx  GoogleSignInButton.tsx
frontend/components/context/: Auth.tsx
frontend/context/: Auth.tsx
frontend/cypress/integration/about/: unauthenticated.spec.js
frontend/cypress/integration/index/: auth.spec.js  authenticated.spec.js
frontend/cypress/plugins/: index.js
frontend/cypress/support/: firebase.js
frontend/docker/: Dockerfile
frontend/firebase/data/: .gitignore
frontend/hooks/: useUser.ts
frontend/pages/: _app.tsx  about.tsx  index.tsx
frontend/public/locales/en/: about.json  index.json
frontend/public/locales/ja/: about.json  index.json  (+1 more)
frontend/services/: firebase.ts
infrastructure/: README.md
infrastructure/aws/organization/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  versions.tf
terraform/: README.md
terraform/environments/production/: main.tf  variables.tf
(+8 files in other folders)
