load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hello",
    srcs = ["main.go"],
    importpath = "github.com/shintaro-uchiyama/jargon/bff/cmd/hello",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["main_test.go"],
    embed = [":hello"],
)
